internal/lang/test/testdata/errors/too_few_args.scampi
module main

func add(a: int, b: int) int {
  return a + b
}

let x = add(1)
